--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -116,7 +116,7 @@
         <div class="col-md-5 general-table table-responsive">
             <table class="table table-striped table-hover">
                 <thead>
-                    <tr class="">
+                    <tr class="bg-primary">
                         <th>Rubros de ingresos</th>
                         {% if periodo_list|keyvalue:year == 'I' %}
                         <th class="text-right">Inicial</th>
